# Termux-S

./: .bash_history  .bashrc  meu_projeto.py
sygma_client/: Cargo.toml
sygma_client/src/: main.rs
sygma_kernel/: Cargo.toml
sygma_kernel/src/: main.rs
sygma_proxy/: Cargo.toml  config.yaml
sygma_proxy/src/: main.rs
