[package]
name = "sygma_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
moka = { version = "0.12", features = ["sync"] }
lazy_static = "1.4"
# Novas dependências para configuração
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

